--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,9 @@
-# --- Framework principal ---
 fastapi==0.115.2
 uvicorn[standard]==0.30.6
-
-# --- ORM y Base de Datos ---
 SQLAlchemy==2.0.34
-mysql-connector-python==9.0.0
-
-# --- Validación y seguridad ---
 pydantic==2.9.2
 pydantic-settings==2.5.2
-python-multipart==0.0.12
-pydantic[email]
-passlib==1.7.4
-
-# --- Utilidades ---
+passlib[bcrypt]==1.7.4
+bcrypt==4.2.0
 python-dotenv==1.0.1
+pymysql==1.1.1
